--- a/_includes/body-footer.html
+++ b/_includes/body-footer.html
@@ -1,5 +1,5 @@
 <footer>
-  {% include v2-body-shareicons.html %}
+  {% include body-shareicons.html %}
   <div>
     <a class="text-decoration-none" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">CONTACT</a>
   </div>
