--- a/_includes/body-videos.html
+++ b/_includes/body-videos.html
@@ -1,11 +1,11 @@
 <article class="section-gray">
   <div class="pure-g">
-    <div class="pure-u-md-1-5"></div>
-    <div class="pure-u-1 pure-u-md-3-5">
-      <h2 class="center">Videos</h2>
+    <div class="pure-u-md-1-4"></div>
+    <div class="pure-u-1 pure-u-md-1-2 center">
+      <h3>Videos</h3>
       <p>By popular demand from folks who can&#8217;t make our events, we&#8217;ve begun recording presentations since Transit Techies #4. See the videos on our Youtube Channel!</p>
       <div class="centering-div">
-        <a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" title="YouTube Transit Techies" target="_blank" rel="noopener" class="pure-button button-purple button-small">YouTube</a>
+        <a href="https://www.youtube.com/channel/UCKSC5WJLFaWQKB0d5BnI6LA" title="YouTube Transit Techies" target="_blank" rel="noopener" class="pure-button button-purple button-large">YouTube</a>
       </div>
     </div>
   </div>
