renamed include files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 <!doctype html>
 <html amp="" lang="en">
 <head>
-  {% include v2-head-meta.html %}
-  {% include v2-head-scripts.html %}
-  {% include v2-head-styles.html %}
+  {% include head-meta.html %}
+  {% include head-scripts.html %}
+  {% include head-styles.html %}
 </head>
 <body>
   {% include body-navbar.html %}
