removed presentations link

--- a/_includes/body-pastevents.html
+++ b/_includes/body-pastevents.html
@@ -26,14 +26,14 @@
                 {{venue_name}}, {{venue_address_1}}, {{venue_city}}</p>
                 <div class="event-item-links">
                   <a href="{{link}}" class="text-decoration-none" target="_blank" rel="noopener">Meetup Page</a>
-                <a href="{{link}}" class="text-decoration-none">Presentations</a>
+                <!-- <a href="{{link}}" class="text-decoration-none">Presentations</a> -->
               </div>
               </div>
             </div>
           </div>
         </template>
         {% endraw  %}
-        <button overflow="" class="pure-button button-purple button-xlarge list-overflow" tabindex="0" role="button">See more</button>
+        <button overflow="" class="pure-button button-purple button-large list-overflow" tabindex="0" role="button">See more</button>
       </amp-list>
     </div>
   </div>
