added organizers section

--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -447,6 +447,12 @@ article:first-of-type {
   color: #ffffff;
 }
 
+.organizer:hover {
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1);
+  background-color: var(--color-purple);
+  color: #ffffff;
+}
+
 .card .you-speaker-body {
 	width: 165px;
 	height:165px;
@@ -488,6 +494,15 @@ article:first-of-type {
   font-weight: regular;
   font-size: 1em;
   margin: 1rem auto;
+}
+
+.organizer-profile {
+	width: 330px;
+	margin: 0 2.5rem 2rem;
+}
+
+.organizer-profile .card {
+	margin-bottom: 2rem;
 }
 
 /* For the generic share icons section */
