Added Service Worker logic

--- a/_includes/body-partners.html
+++ b/_includes/body-partners.html
@@ -8,14 +8,14 @@
           <div class="pure-u-1 pure-u-md-1-2">
             <div class="pure-g">
               <div class="centering-div">
-              <a href="https://www.meetup.com/Transportation-Techies/" target="_blank" rel="noopener" class="text-decoration-none"><amp-img height="60" width="60" style="border-radius: 50%" alt="Transportation Techies DC logo" src="/img/transportationtechiesdc-logo.jpg"></amp-img></a>
+              <a href="https://www.meetup.com/Transportation-Techies/" target="_blank" rel="noopener" class="text-decoration-none" aria-label="Transportation Techies"><amp-img height="60" width="60" style="border-radius: 50%" alt="Transportation Techies DC logo" src="/img/transportationtechiesdc-logo.jpg"></amp-img></a>
             </div>
             </div>
           </div>
           <div class="pure-u-1 pure-u-md-1-2">
             <div class="pure-g">
               <div class="centering-div">
-		            <a href="https://www.intersection.com" target="_blank" rel="noopener" class="text-decoration-none"><amp-img height="60" width="300" alt="Intersection logo" src="/img/Intersection-logo-side.png" class="centered"></amp-img></a>
+		            <a href="https://www.intersection.com" target="_blank" rel="noopener" class="text-decoration-none" aria-label="Intersection"><amp-img height="60" width="300" alt="Intersection logo" src="/img/Intersection-logo-side.png" class="centered"></amp-img></a>
 		        </div>
 		    </div>
           </div>
