--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   {% include head-styles.html %}
 </head>
 <body>
+  {% include body-serviceworker.html %}
   {% include body-navbar.html %}
 
   {{ content }}
