--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -6,4 +6,5 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="manifest" href="/manifest.json">
+  <meta name="google-site-verification" content="uqINAJCiiD1hvT2l8JEEhysJgW0sE_u0yCgsChxkslg" />
   <meta name="theme-color" content="#310967">
