--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -96,7 +96,7 @@ p.dropcap:first-child:first-letter {
 footer {
   width: 100vw;
   max-width: 100vw;
-  height: 100px;
+  height: 130px;
   background-color: var(--color-darkgray);
   color: #ffffff;
   text-align: center;
@@ -799,6 +799,29 @@ article:first-of-type {
   100% {
     opacity: 0;
   }
+}
+
+#userConsent {
+  position: relative;
+  bottom: unset;
+  left: unset;
+  right: unset;
+  background-color: inherit;
+  width: unset;
+}
+
+#userConsentFlow {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background: rgba(0,0,0,.7);
+}
+
+.consentPopup {
+  margin-top: 30px;
+  padding: 10px;
 }
 
 </style>
