--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   {% include body-serviceworker.html %}
+  {% include body-analytics.html %}
   {% include body-navbar.html %}
 
   {{ content }}
