--- a/_includes/body-footer.html
+++ b/_includes/body-footer.html
@@ -4,4 +4,36 @@
     <a class="text-decoration-none" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">CONTACT</a>
   </div>
   <p>&copy; Transit Techies, 2018</p>
+  <amp-consent id="userConsent" layout="nodisplay">
+    <script type="application/json">
+      {
+        "consents": {
+          "eu": {
+            "promptIfUnknownForGeoGroup": "eu",
+            "promptUI": "userConsentFlow"
+          }
+        },
+        "postPromptUI": "userConsentPost"
+      }
+    </script>
+    <div id="userConsentFlow" class="popupOverlay">
+      <div class="pure-g">
+        <div class="pure-u-md-1-4"></div>
+        <div class="pure-u-1 pure-u-md-1-2 center section-purple">
+          <div class="consentPopup">
+            <div class="dismiss-button" role="button" tabindex="0" on="tap:userConsent.dismiss">X</div>
+            <h3>Analytics Opt-in Consent</h3>
+            <p>Hi! To create better content and experiences, we would like to have a better idea of how our website is used. To do this, we need to save an analytics cookie on your browser. We do not record anything like names, emails, or other information, and we will never share your individual information with a third party.</p>
+            <div class="centering-div">
+              <button on="tap:userConsent.accept" class="pure-button button-white button-white-primary button-large">OK! A cookie is fine!</button>
+              <button on="tap:userConsent.reject" class="pure-button button-white button-white-primary button-large">No thanks</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="userConsentPost">
+      <a on="tap:userConsent.prompt()">Update Analytics Consent</a>
+    </div>
+  </amp-consent>
 </footer>
