Remove errant amp property in html tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
-<!--- Copyright 2018 Transit Techies -->
+<!--- Copyright 2023 Transit Techies -->
 <!doctype html>
-<html amp="" lang="en">
+<html lang="en">
 <head>
   {% include head-meta.html %}
   {% include head-scripts.html %}
