Unify profile links to be personal site or LinkedIn, remove outdated socials, update footer to include attributions, and put better links on the homepage for people to get engaged.

--- a/_includes/body-footer.html
+++ b/_includes/body-footer.html
@@ -1,7 +1,32 @@
 <footer>
   {% include body-shareicons.html %}
   <div>
-    <a class="text-decoration-none" href="https://www.meetup.com/Transit-Techies-NYC/discussions/" target="_blank" rel="noopener">CONTACT</a>
+    <a class="text-decoration-none" href="https://www.meetup.com/transit-techies-nyc/" target="_blank" rel="noopener">CONTACT</a>
   </div>
-  <p>&copy; Transit Techies, 2023</p>
+  <p>© Transit Techies, 2025</p>
+
+  <div class="footer-dependencies">
+    <p>
+      Site built using 
+      <a href="https://jekyllrb.com" target="_blank">Jekyll</a>, 
+      <a href="https://github.com/pure-css/pure" target="_blank">PureCSS</a>,
+      <a href="https://github.com/necolas/normalize.css/" target="_blank">normalize.css</a>, and
+      <a href="https://developer.chrome.com/docs/workbox" target="_blank">Workbox</a>.
+      
+      Fonts used are
+      <a href="https://fonts.google.com/specimen/Oswald" target="_blank">Oswald</a> and
+      <a href="https://fonts.google.com/specimen/Roboto" target="_blank">Roboto</a>.
+  
+      Design by 
+      <a href="https://kohzy.com" target="_blank">Kohzy Koh</a>
+      based on
+      <a href="https://github.com/devadvance/site-template-jekyll" target="_blank">site-template-jekyll</a> by
+      <a href="http://mattj.io" target="_blank">Matt Joseph</a>.
+
+      Hosted via
+      <a href="https://github.com/transittechies/transittechies.github.io" target="_blank">GitHub, GitHub pages</a>, and
+      <a href="https://www.cloudflare.com" target="_blank">Cloudflare</a>.
+    </p>
+  </div>
+  
 </footer>
