--- a/_includes/head-styles.html
+++ b/_includes/head-styles.html
@@ -91,11 +91,21 @@ p.dropcap:first-child:first-letter {
 footer {
   width: 100vw;
   max-width: 100vw;
-  height: 130px;
+  min-height: 130px;
   background-color: var(--color-darkgray);
   color: #ffffff;
   text-align: center;
   padding: 2.4rem 0;
+}
+
+.footer-dependencies {
+  margin: auto;
+  max-width: 20rem;
+}
+
+.footer-dependencies > p {
+  line-height: 1rem;
+  font-size: 0.75rem;
 }
 
 @font-face {
